# exray

./: .gitignore  README.md  cluster.py  main.py  pyproject.toml  requirements.txt
_ansible/: configure_nodes.yaml  destroy_cluster.yaml  inventory.yaml  secrets.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ClusterInfo.tsx  RunCard.tsx  RunStatusBadge.tsx  RunsDashboard.tsx  SubmitCtganForm.tsx  SubmitCustomForm.tsx  SubmitLlmForm.tsx
frontend/src/hooks/: useRuns.ts
state/: entries.py
workflows/: argo.py  ctgan.yaml  custom.yaml  llm.yaml  simple_passthrough.py
