[project]
name = "exray-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ansible>=12.1.0",
    "fastapi[standard]>=0.120.0",
    "kubernetes>=31.0.0",
    "minio>=7.2.18",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]
